syntax = "proto3";

package miniboard.feeds.v1;

import "google/api/annotations.proto";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ngalaiko/miniboard/server/genproto/feeds/v1;feeds";

service FeedsService {
    rpc GetFeed(GetFeedRequest) returns (Feed) {
        option (google.api.http) = {
            get: "/api/v1/feeds/{id=*}"
        };
    }

    rpc ListFeeds(ListFeedsRequest) returns (ListFeedsResponse) {
        option (google.api.http) = {
            get: "/api/v1/feeds"
        };
    }
}

message GetFeedRequest {
    string id = 1;
}

message ListFeedsRequest {
    // The maximum number of feeds to return.
    int64 page_size = 1;

    // The next_page_token value returned from a previous List request, if any.
    string page_token = 2;
}

message ListFeedsResponse {
    // There will be a maximum number of feeds returned based on the page_size field int the request.
    repeated Feed feeds = 1;

    // Token to retrieve the next page of results, or empty if there are no more results in the list.
    string next_page_token = 2;
}

message Feed {
    // Id of the resource.
    string id = 1;

    // Id of user who owns this feed.
    string user_id = 2;

    // Time of the last feed fetch by the reader.
    google.protobuf.Timestamp last_fetched = 3;

    // Url is the feed's url.
    string url = 4;

    // Title is the feed's title.
    string title = 5;
}
